@@ -8,6 +8,8 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import dev.the2davi.lab.security.session.SecuritySession;
+import dev.the2davi.lab.security.session.SecuritySessionStore;
 import dev.the2davi.lab.security.util.JwtUtil;
 import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
@@ -18,8 +20,11 @@ import jakarta.servlet.http.HttpServletResponse;
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
 	private final JwtUtil jwtUtil;
-	public JwtAuthenticationFilter(JwtUtil jwtUtil) {
+	private final SecuritySessionStore sessionStore;
+	
+	public JwtAuthenticationFilter(JwtUtil jwtUtil, SecuritySessionStore sessionStore) {
 		this.jwtUtil = jwtUtil;
+		this.sessionStore = sessionStore;
 	}
 
 	@Override
@@ -29,26 +34,24 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 			String jwt = jwtUtil.parseJwt(request);
 			Claims claims = (jwt != null) ? jwtUtil.getClaims(jwt) : null;
 
-			//* if(jwt != null && jwtUtil.validateToken(jwt)) {
 			if(claims != null) {
 				//토큰이 유효성 검증을 통과한 이후.
-				//* String userId = jwtUtil.getUserIdFromToken(jwt);
-				String username = claims.getSubject();
-				String pveTicket = claims.get("pve_ticket", String.class);
-				String pveCsrf = claims.get("pve_csrf", String.class);
+				String sid = claims.get("sid", String.class);
+				SecuritySession session = sessionStore.find(sid);
 				
-				UsernamePasswordAuthenticationToken authentication = 
-						//* new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
-						new UsernamePasswordAuthenticationToken(username, null, List.of());
-				
-				//** authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-				Map<String, String> pveDetails = Map.of(
-					"pve_ticket", (pveTicket != null) ? pveTicket : "",
-					"pve_csrf", (pveCsrf != null) ? pveCsrf : ""
-				);
-				authentication.setDetails(pveDetails);
-				
-				SecurityContextHolder.getContext().setAuthentication(authentication);
+				if(session != null) {
+					UsernamePasswordAuthenticationToken authentication = 
+							new UsernamePasswordAuthenticationToken(session.username(), null, List.of());
+					
+					Map<String, String> pveDetails = Map.of(
+							"pve_ticket", session.ticket(),
+							"pve_csrf", session.CSRFPreventionToken()
+							);
+					
+					authentication.setDetails(pveDetails);
+					
+					SecurityContextHolder.getContext().setAuthentication(authentication);
+				}
 			}
 		} catch(Exception e) {
 			logger.error("cannot set user authentication:", e);
